force-app/main/default/objects/Customer_Interaction__b/Customer_Interaction__b.object-meta.xml
<CustomObject>
    <description>SFORCE-COM: U.F.B.O. Defense, where players defend Earth against the Unidentified Flying Big Object menace.</description>
    <label>Customer Interaction</label>
    <pluralLabel>Customer Interactions</pluralLabel>
</CustomObject>