force-app/main/default/objects/Customer_Interaction__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Interactions</relationshipLabel>
    <relationshipName>Customer_Interactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>