force-app/main/default/objects/Customer_Interaction__b/fields/Date_of_Play__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Play__c</fullName>
    <label>Date of Play</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>