force-app/main/default/objects/Customer_Interaction__b/fields/Level_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Level_Achieved__c</fullName>
    <label>Level Achieved</label>
    <length>16</length>
    <type>Text</type>
</CustomField>